# Hexapod

PCB/: Hexapod.kicad_pcb  Hexapod.kicad_prl  Hexapod.kicad_pro  Hexapod.kicad_sch
PCB/Hexapod/: Hexapod.kicad_pcb  Hexapod.kicad_prl  Hexapod.kicad_pro  Hexapod.kicad_sch
Simulator/: CMakeLists.txt  backup_main.cpp  compile_commands.json  fbuild.bat  lbuild.bat  main.cpp  windows_build.bat
Simulator/res/shaders/: basic.glsl  grid.glsl
Simulator/src/core/: CMakeLists.txt  IK.cpp  IK.h  hexapod.cpp  hexapod.h  leg.cpp  leg.h  shader.cpp  shader.h
Simulator/src/graphics/: CMakeLists.txt  line.cpp  line.h
Simulator/vendors/: CMakeLists.txt
UDP/: CMakeLists.txt
UDP/Linux/: client.cpp  client.h  server.cpp  server.h
UDP/Windows/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h
